--- a/mcb.plist
+++ b/mcb.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://raw.githubusercontent.com/Tiding/MCB/master/mcb2_1_0.ipa</string>
+                    <string>http://app.baoxian828.com/mcb20100.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
